crates/strider/tests/snapshots/v2__ppc64be__calls__mutual_a.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "5" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "8" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "10" -> "7" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "11" -> "7" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "12" -> "7" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "12" [label="φ f2", shape=house, fillcolor="#163030"];
  "5" -> "12" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "13" -> "12" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v14" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v14" [color="#888888", style=dashed];
  "v14" -> "12" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "6" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v2" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "15" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" -> "6" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "16" [label="const 0x10010330:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "17" -> "6" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "18" -> "6" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "18" [label="arg[1] ← r4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "17" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "19" -> "17" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "19" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "20" -> "19" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "20" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "21" -> "20" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "22" -> "20" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0xffffffffffffffff:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "21" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "23" -> "21" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "23" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "24" -> "23" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "24" [label="arg[0] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "15" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "25" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "26" -> "15" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "23" -> "15" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "26" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "27" -> "26" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "28" -> "26" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0xfffffffffffffff4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "27" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "25" [label="StackStore u64\n→ ram[sp - 112]", shape=box3d, fillcolor="#20182a"];
  "29" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "30" -> "25" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "27" -> "25" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "30" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "31" -> "30" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "31" [label="const 0xffffffffffffff90:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "27" -> "30" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "29" [label="StackStore u64\n→ ram[sp + 16]", shape=box3d, fillcolor="#20182a"];
  "32" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "33" -> "29" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "34" -> "29" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "34" [label="init\nLR", shape=Mdiamond, fillcolor="#1a3a5c"];
  "33" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "35" -> "33" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "35" [label="const 0x10:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "27" -> "33" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "32" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "36" -> "32" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "37" -> "32" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "38" -> "32" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "38" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "37" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "39" -> "37" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "39" [label="const 0xfffffffffffffff8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "27" -> "37" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "36" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "11" [label="φ f1", shape=house, fillcolor="#163030"];
  "5" -> "11" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "40" -> "11" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v41" [label="Post Call\nf1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v41" [color="#888888", style=dashed];
  "v41" -> "11" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "40" [label="init\nf1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="φ r4", shape=house, fillcolor="#163030"];
  "5" -> "10" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "18" -> "10" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v42" [label="Post Call\nr4", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v42" [color="#888888", style=dashed];
  "v42" -> "10" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "9" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "43" -> "9" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "43" [label="φ Val", shape=house, fillcolor="#163030"];
  "5" -> "43" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "44" -> "43" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "44" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "45" -> "43" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "45" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "46" -> "45" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "46" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "v47" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v47" [color="#888888", style=dashed];
  "v47" -> "46" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "48" -> "46" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "48" [label="const 0x1:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "8" [label="φ Mem", shape=house, fillcolor="#163030"];
  "5" -> "8" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "49" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "50" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "50" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "6" -> "50" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "51" -> "50" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "45" -> "50" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "51" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "27" -> "51" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "52" -> "51" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "52" [label="const 0xfffffffffffffff0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "49" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "15" -> "49" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "51" -> "49" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "53" -> "49" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "53" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "54" -> "4" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "54" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "55" -> "54" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "56" -> "54" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "56" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "55" [label="ShiftRight:u8", shape=box, fillcolor="#2d2d2d"];
  "57" -> "55" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "58" -> "55" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "58" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "57" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "59" -> "57" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "60" -> "57" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "60" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "61" -> "60" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "62" -> "60" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "62" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "61" [label="init\nxer_so", shape=Mdiamond, fillcolor="#1a3a5c"];
  "59" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "63" -> "59" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "64" -> "59" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "64" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "65" -> "64" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "66" -> "64" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "66" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "65" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "67" -> "65" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "67" [label="Equal\nu64 → bool", shape=box, fillcolor="#2d2d2d"];
  "68" -> "67" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "69" -> "67" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "69" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "68" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "23" -> "68" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "63" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "70" -> "63" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "71" -> "63" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "71" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "72" -> "71" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "73" -> "71" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "73" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "72" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "74" -> "72" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "74" [label="Sless\nu64 → bool", shape=box, fillcolor="#2d2d2d"];
  "75" -> "74" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "75" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "68" -> "74" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "70" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "76" -> "70" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "77" -> "70" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "77" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "76" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "78" -> "76" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "78" [label="Sless\nu64 → bool", shape=box, fillcolor="#2d2d2d"];
  "68" -> "78" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "79" -> "78" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "79" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
}
